@@ -200,7 +200,8 @@ Turns off warning mode\.
 .PP
 \fB\-m\fR, \fB\-\-exposure_mode\fR \fIEXPOSURE_MODE\fR
 .RS 4
-Specify exposure mode. Does NOT work correctly. Please do not use it.
+Specify exposure mode. Only works if the camera is set to user mode
+(and in manual mode for some models).
 .RE
 .PP
 \fB\-i\fR, \fB\-\-iso\fR \fIISO\fR
